<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="default_app_name">TroTro© for Drivers</string>
    <string name="default_app_name_passenger">TroTro© for Passengers</string>
    <string name="app_name" tools:override="true">shared</string>
    <string name="welcome">Welcome to</string>
    <string name="login">Get started</string>


    <string name="network_error">Oops! No internet connection… </string>
    <string name="enable_location_settings">Please provide location permission </string>
    <string name="location_permission_denied_error">Please provide Location Permission for functioning of ConsumerApp</string>

    <string name="book_ride">Join TroTro</string>
    <string name="book_another_ride">Join another TroTro</string>
    <string name="find_driver">Connecting you to nearest driver</string>
    <string name="amount">$%1$s</string>
    <string name="estimated_fare">Estimated Fare</string>
    <string name="share_trip">Share Trip</string>

    <string name="hint_name">Enter your name</string>
    <string name="hint_phone">Enter your mobile number</string>
    <string name="submit">Submit</string>
    <string name="select_place_title">Where do you want to go?</string>
    <string name="fetching_profile_details">Fetching your saved profile details</string>
    <string name="update_profile_details">Edit/ update profile details</string>
    <string name="no_data">--</string>
    <string name="enter_pickup_location">Enter your pickup location</string>
    <string name="no_cars_available">No cars available</string>
    <string name="title_trips">Trips</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_profile">Profile</string>
    <string name="title_request_trip">Request Driver</string>
    <string name="developer">Developed by <b>Efe Hays (Mrs.)</b>\nAll rights reserved © (2019)</string>
    <string name="dropoff">Drop-Off</string>
    <string name="pickup">Pickup</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="confirm_pickup">Confirm Pickup</string>
    <string name="confirm_dropoff">Confirm dropoff</string>
    <string name="title_coupons">Coupons</string>
    <string name="title_promotions">Promotions</string>
    <string name="search">Search</string>
    <string name="title_find_driver">Find Driver</string>
    <string name="title_earnings">Earnings</string>

    <!--    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAOtv5oXGXcgOQhQYFC7j4TFmIaLmZb_s0</string>-->
</resources>
